apps/cygnus/Endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: cygnus
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - port: 443
