apps/cygnus/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cygnus
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
