apps/cygnus/cygnus.yaml
apiVersion: v1
kind: Service
metadata:
  name: cygnus
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Endpoints
metadata:
  name: cygnus
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cygnus
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - cygnus.nahue.com.ar
      secretName: cygnus
  rules:
    - host: cygnus.nahue.com.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cygnus
                port:
                  number: 80
